horizontal scrolling fix. Mobile

--- a/assets/css/site/header.css
+++ b/assets/css/site/header.css
@@ -16,6 +16,8 @@ header.gh-head {
   height: var(--header-height);
   transition: all var(--transition-speed) ease-in-out;
   overflow: hidden;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .gh-head-inner {
